massive update of deps and libs