@@ -43,12 +43,10 @@ import com.webcohesion.enunciate.modules.jaxb.util.ReferencedNamespacesMethod;
 import com.webcohesion.enunciate.modules.jaxrs.JaxrsModule;
 import com.webcohesion.enunciate.util.freemarker.*;
 import freemarker.cache.URLTemplateLoader;
-import freemarker.core.Environment;
 import freemarker.template.Configuration;
 import freemarker.template.Template;
 import freemarker.template.TemplateException;
-import freemarker.template.TemplateExceptionHandler;
-import org.apache.commons.configuration.HierarchicalConfiguration;
+import org.apache.commons.configuration2.HierarchicalConfiguration;
 
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.DeclaredType;
@@ -56,7 +54,6 @@ import javax.xml.bind.annotation.XmlElements;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.io.Writer;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.*;
@@ -79,7 +76,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
 
   @Override
   public List<DependencySpec> getDependencySpecifications() {
-    return Arrays.asList((DependencySpec) new DependencySpec() {
+    return List.of(new DependencySpec() {
       @Override
       public boolean accept(EnunciateModule module) {
         if (module instanceof JaxbModule) {
@@ -132,7 +129,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
     }
 
     Map<String, String> packageToNamespaceConversions = getPackageToNamespaceConversions();
-    List<TypeDefinition> schemaTypes = new ArrayList<TypeDefinition>();
+    List<TypeDefinition> schemaTypes = new ArrayList<>();
     ExtensionDepthComparator comparator = new ExtensionDepthComparator();
 
     EnunciateJaxbContext jaxbContext = this.jaxbModule.getJaxbContext();
@@ -153,7 +150,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
     }
 
     File srcDir = getSourceDir();
-    Map<String, Object> model = new HashMap<String, Object>();
+    Map<String, Object> model = new HashMap<>();
 
     model.put("schemaTypes", schemaTypes);
     model.put("namespaceFor", new ClientPackageForMethod(packageToNamespaceConversions, this.context));
@@ -168,9 +165,9 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
     model.put("file", new FileDirective(srcDir, this.enunciate.getLogger()));
     model.put("generatedCodeLicense", this.enunciate.getConfiguration().readGeneratedCodeLicenseFile());
 
-    Set<String> facetIncludes = new TreeSet<String>(this.enunciate.getConfiguration().getFacetIncludes());
+    Set<String> facetIncludes = new TreeSet<>(this.enunciate.getConfiguration().getFacetIncludes());
     facetIncludes.addAll(getFacetIncludes());
-    Set<String> facetExcludes = new TreeSet<String>(this.enunciate.getConfiguration().getFacetExcludes());
+    Set<String> facetExcludes = new TreeSet<>(this.enunciate.getConfiguration().getFacetExcludes());
     facetExcludes.addAll(getFacetExcludes());
     FacetFilter facetFilter = new FacetFilter(facetIncludes, facetExcludes);
 
@@ -182,10 +179,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
       try {
         processTemplate(apiTemplate, model);
       }
-      catch (IOException e) {
-        throw new EnunciateException(e);
-      }
-      catch (TemplateException e) {
+      catch (IOException | TemplateException e) {
         throw new EnunciateException(e);
       }
     }
@@ -276,10 +270,8 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
       }
     });
 
-    configuration.setTemplateExceptionHandler(new TemplateExceptionHandler() {
-      public void handleTemplateException(TemplateException templateException, Environment environment, Writer writer) throws TemplateException {
-        throw templateException;
-      }
+    configuration.setTemplateExceptionHandler((templateException, environment, writer) -> {
+      throw templateException;
     });
 
     configuration.setLocalizedLookup(false);
@@ -334,10 +326,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
     try {
       return processTemplate(res, model);
     }
-    catch (TemplateException e) {
-      throw new EnunciateException(e);
-    }
-    catch (IOException e) {
+    catch (TemplateException | IOException e) {
       throw new EnunciateException(e);
     }
   }
@@ -436,7 +425,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
    */
   public Map<String, String> getPackageToNamespaceConversions() {
     List<HierarchicalConfiguration> conversionElements = this.config.configurationsAt("package-conversions.convert");
-    HashMap<String, String> conversions = new HashMap<String, String>();
+    HashMap<String, String> conversions = new HashMap<>();
     for (HierarchicalConfiguration conversionElement : conversionElements) {
       conversions.put(conversionElement.getString("[@from]"), conversionElement.getString("[@to]"));
     }
@@ -445,7 +434,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
 
   public Set<String> getFacetIncludes() {
     List<Object> includes = this.config.getList("facets.include[@name]");
-    Set<String> facetIncludes = new TreeSet<String>();
+    Set<String> facetIncludes = new TreeSet<>();
     for (Object include : includes) {
       facetIncludes.add(String.valueOf(include));
     }
@@ -454,7 +443,7 @@ public class PHPXMLClientModule extends BasicGeneratingModule implements ApiFeat
 
   public Set<String> getFacetExcludes() {
     List<Object> excludes = this.config.getList("facets.exclude[@name]");
-    Set<String> facetExcludes = new TreeSet<String>();
+    Set<String> facetExcludes = new TreeSet<>();
     for (Object exclude : excludes) {
       facetExcludes.add(String.valueOf(exclude));
     }
